\name{NEWS}
\title{NEWS file for the grImport2 package}
\encoding{UTF-8}

\section{Changes in version 0.1-0}{
  \itemize{

    \item Initial release. Intended to import SVG images generated by
    the 'grConvert' package.

    \item Now using SVG instead of PostScript, allowing us to support
    many more graphical features.

  }
}